--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body class="gradient">
 	<h1>Background Generator</h1> 
-	<input class="color1" type="color" name="color1" value="#ff0000">
-	<input class="color2" type="color" name="color2" value="#00ff00">
+	<input class="color1" type="color" name="color1" value="#F7E173">
+	<input class="color2" type="color" name="color2" value="#E46FFB">
 	<h3>Current CSS Background</h3>
 	<h5></h5>
-	<script type="text/javascript" src="test.js"></script>
+	<script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
